# 3d-vision

./: .gitignore  .gitmodules  Dockerfile  README.md  dtu_to_visn_data_converter.py  package.sh  requirements.txt  setup.cfg  tox.ini
resources/scenes/: place_scene_folders_here.txt
tests/: test_dataloader.py  test_keypoint.py  test_keypoint_evaluation.py  test_main.py  test_poses.m
visn/: constants.py  main.py  main_pipeline.py
visn/benchmark/: benchmark.py  metrics.py  timing.py
visn/config/: __init__.py  config.json
visn/data/: augmentation.py  loader.py  synthetic.py
visn/estimation/: keypoint.py  pose.py
visn/examples/: fetch_example.py
visn/models/: __init__.py  uprightnet_wrapper.py
visn/notebooks/.ipynb_checkpoints/: Benchmarking-checkpoint.ipynb
visn/process/: __init__.py  components.py  pipeline.py  utils.py
visn/solvers/: keypoint.py  pose.py
visn/utils/: __init__.py  create_data_folder.py  create_poses.py  gravity_error.py
visn/visual/: plot.py
