[metadata]
name = visn
version = 0.0.1
author = Nicola Burger, Shubham Kumar, Timo Schonegg, Yoga Wibowo
author_email = kumarsh@student.ethz.ch, nicola.burger@inf.ethz.ch, timoscho@student.ethz.ch, ywibowo@student.ethz.ch
description = Improving relative pose estimation by estimating gravity 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.ethz.ch/kumarsh/3d-vision
project_urls =
    Bug Tracker = https://gitlab.ethz.ch/kumarsh/3d-vision/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7.0
include_package_data = true
